# gk-analysis

./: .gitignore  README.md  pyproject.toml
src/gk_eval/: GreenKubo_run.py  __init__.py  systematic_GK_analysis.py  uncertainty_tools.py
src/gk_eval/struct/: nanowire.py  symmetry.py
