[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gk_eval"
authors = [
    { name = "Sandro Wieser", email = "sandro.wieser@tuwien.ac.at" },
]
description = "Tool to evaluate Green-Kubo simulations"
license = { text = "Apache License 2.0" }
requires-python = ">=3.8"
dependencies = [
    "ase",
    "matplotlib",
    "numpy",
    "scipy",
    "tqdm"
]
readme = "README.md"
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["./src"]

[tool.setuptools.dynamic]
version = {attr = "gk_eval.__version__"}

[project.scripts]
systematic_GK_analysis = "gk_eval.systematic_GK_analysis:main"